crates/plotnik-tests/tests/03-analyze/duplicates/duplicate_branch_label.txt
Q = [
  A: (a) @x
  A: (b) @y
]
------------------ DIAGNOSTICS -------------------
error: branch label `A` is already used in this alternation
 --> query.ptk:3:3
  |
3 |   A: (b) @y
  |   ^
  |
help: each branch label must be unique within an alternation
-------------------- SYMBOLS ---------------------
Q
